--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -15,7 +15,7 @@
             <!-- ============================================================== -->
             <router-outlet></router-outlet>
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- ============================================================== -->
             <!-- End PAge Content -->
             <!-- ============================================================== -->
